feat : Collection Singleton -> ArrayList로 변경
- Collection으로 선언 시 길이변경이 안됨!! -> JPA Unit Test시 문제 발생
- MemberEntity password 변경 가능하게 수정

issue: #6